[project]
name = "yarabsalam-backend"
version = "0.1.0"
description = "YarabSalam Chatbot Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "httpx",
    "duckduckgo-search",
    "beautifulsoup4",
    "lxml"
]

# 🚨 التعديل السحري: استبدال نظام البناء القديم بنظام Hatchling الحديث المتوافق مع Vercel و uv
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
